# briefly

./: .gitmodules  Cargo.toml  README.md  print_style.css  style.css
src/: citation.rs  filters.rs  github.rs  main.rs
src/md/: html.rs  mod.rs
templates/: contribution.html  project.html  resume.html
